# mpquic-amr

./: .gitignore  CMakeLists.txt  README.MD
certs/: cert.pem
client/: camera.cpp  camera.h  client_uploader.c  path_algo.c  path_algo.h
scripts/certs/: cert.pem  key.pem
server/: app_ctx.h  frame_assembler.c  frame_assembler.h  server_recv.c
